Fix palette z-index. Change event model

--- a/src/style.scss
+++ b/src/style.scss
@@ -14,6 +14,7 @@
     position: absolute;
     top: 40px;
     left: 0;
+    z-index: 2;
 }
 
 .color {
